src/test/resources/purescript_examples/passing/LetInInstance.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(TypeDeclaration)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PsiElement(proper name)('String')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('fooString')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Foo')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement(proper name)('String')
          PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(ValueDeclaration)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
          PsiElement(=)('=')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('go')
                  PsiElement(whitespace)('\n    ')
          PsiElement(where)('where')
          PsiElement(whitespace)('\n    ')
          PureASTWrapperElement(TypeDeclaration)
            PsiElement(identifier)('go')
            PsiElement(whitespace)(' ')
            PsiElement(::)('::')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PsiElement(proper name)('String')
                PsiElement(whitespace)(' ')
              PsiElement(->)('->')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(Type)
                PureASTWrapperElement(TypeAtom)
                  PsiElement(proper name)('String')
                  PsiElement(whitespace)('\n    ')
          PureASTWrapperElement(ValueDeclaration)
            PsiElement(identifier)('go')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Binder)
              PureASTWrapperElement(VarBinder)
                PsiElement(identifier)('s')
                PsiElement(whitespace)(' ')
            PsiElement(=)('=')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('s')
                    PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
